--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -88,7 +88,7 @@ worker_mode = "private"
 
 dashboard_enabled = "true"
 
-kubernetes_version = "v1.12.7"
+kubernetes_version = "LATEST"
 
 node_pools = "1"
 
