--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -29,22 +29,22 @@ region = "us-phoenix-1"
 # networking
 
 newbits = {
-  "bastion" = 8
-  "lb"      = 8
-  "workers" = 8
+  "bastion" = 13 
+  "lb"      = 11
+  "workers" = 2
 }
 
 subnets = {
-  "bastion"     = 1
-  "int_lb_ad1"  = 11
-  "int_lb_ad2"  = 21
-  "int_lb_ad3"  = 31
-  "pub_lb_ad1"  = 12
-  "pub_lb_ad2"  = 22
-  "pub_lb_ad3"  = 32
-  "workers_ad1" = 13
-  "workers_ad2" = 23
-  "workers_ad3" = 33
+  "bastion"     = 32
+  "int_lb_ad1"  = 16
+  "int_lb_ad2"  = 17
+  "int_lb_ad3"  = 18
+  "pub_lb_ad1"  = 19
+  "pub_lb_ad2"  = 20
+  "pub_lb_ad3"  = 21
+  "workers_ad1" = 1
+  "workers_ad2" = 2
+  "workers_ad3" = 3
 }
 
 vcn_cidr = "10.0.0.0/16"
@@ -77,7 +77,7 @@ image_operating_system_version = "7.6"
 
 # availability_domains
 
-# set value to 0 to disable
+# which AD where to place non-OKE resources
 availability_domains = {
   "bastion"     = 1
 }
