metricserver variable added

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -29,7 +29,7 @@ region = "us-phoenix-1"
 # networking
 
 newbits = {
-  "bastion" = 13 
+  "bastion" = 13
   "lb"      = 11
   "workers" = 2
 }
@@ -146,3 +146,9 @@ install_helm = true
 calico_version = "3.6"
 
 install_calico = false
+
+#metricserver
+
+kubernetes_version_metricserver = 1.8
+
+install_metricserver = false
