reset subnet ids map to old way. for loop introduces a bug somewhere. added jetstack and certmanager installation options in terraform.tfvars.example
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -137,6 +137,10 @@ username = ""
 
 # helm
 
+add_incubator_repo = false
+
+add_jetstack_repo = false
+
 helm_version = "2.14.1"
 
 install_helm = true
