added sydney as region, added 2 variables package_update and package_upgrade for bastion host, updated documentation and terraform.tfvars.example
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -82,6 +82,10 @@ availability_domains = {
   "bastion"     = 1
 }
 
+package_update = false
+
+package_upgrade = true
+
 # oke
 
 cluster_name = "oke"
