--- a/modules/base/bastion/cloudinit/bastion.template.yaml
+++ b/modules/base/bastion/cloudinit/bastion.template.yaml
@@ -2,8 +2,8 @@
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl
 
 #cloud-config
-package_update: true
-package_upgrade: true
+package_update: ${package_update}
+package_upgrade: ${package_upgrade}
 packages:
   - ntp 
   - python-pip
