renamed bastion packages variables, updated docs, added additional documentation for oke networking
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -82,9 +82,9 @@ availability_domains = {
   "bastion"     = 1
 }
 
-package_update = false
+bastion_package_update = false
 
-package_upgrade = true
+bastion_package_upgrade = true
 
 # oke
 
