--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -82,9 +82,9 @@ availability_domains = {
   "bastion"     = 1
 }
 
-bastion_package_update = false
+package_update = false
 
-bastion_package_upgrade = true
+package_upgrade = true
 
 # oke
 
