--- a/modules/base/bastion/cloudinit/oracle.template.yaml
+++ b/modules/base/bastion/cloudinit/oracle.template.yaml
@@ -1,13 +1,9 @@
 # Copyright 2017, 2019, Oracle Corporation and/or affiliates.  All rights reserved.
-# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl
+# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl
 
 #cloud-config
-package_upgrade: ${package_upgrade}
-packages:
-  - ntp 
-  - python-pip
-timezone: Australia/Sydney
-
+package_upgrade: ${bastion_package_upgrade}
+timezone: ${timezone}
 write_files:
 # setup script
   - path: "/root/bastion/bastion.sh"
@@ -18,6 +14,4 @@ write_files:
 runcmd:
  - echo "Configuring bastion..." | tee /root/bastion/bastion.txt
  - bash /root/bastion/bastion.sh
- - pip install oci-cli --upgrade pip
- - echo "export OCI_CLI_AUTH=instance_principal" >>  /home/opc/.bashrc
  - touch /home/opc/bastion.finish
