--- a/modules/base/admin/cloudinit/admin.template.yaml
+++ b/modules/base/admin/cloudinit/admin.template.yaml
@@ -1,12 +1,11 @@
 # Copyright 2017, 2019, Oracle Corporation and/or affiliates.  All rights reserved.
-# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl
+# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl
 
 #cloud-config
 package_upgrade: ${admin_upgrade}
 packages:
-  - python-pip
+  - python3
 timezone: ${timezone}
-
 write_files:
 # setup script
   - path: "/root/admin/admin.sh"
@@ -17,6 +16,5 @@ write_files:
 runcmd:
  - echo "Configuring admin..." | tee /root/admin/admin.txt
  - bash /root/admin/admin.sh
- - pip install oci-cli --upgrade pip
  - echo "export OCI_CLI_AUTH=instance_principal" >>  /home/opc/.bashrc
  - touch /home/opc/admin.finish
