revamped oke network security list according to new rules and to add waf, now using stateful ingress and egresses; service gateway is now required so no longer a configuration option, updated documentation for waf, re-added stable and incubator repos
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -38,8 +38,6 @@ newbits = {
   workers = 2
 }
 
-service_gateway_enabled = true
-
 vcn_cidr = "10.0.0.0/16"
 
 vcn_dns_label = "oke"
@@ -132,6 +130,8 @@ worker_mode = "private"
 lb_subnet_type = "public"
 
 preferred_lb_subnets = "public"
+
+enable_waf = true
 
 # ocir
 create_auth_token = false
