removed provider.tf so module can be used from hashicorp registry, added instructions for using this repo and hashicorp module, fixed incorrect part in topology, updated changelog
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -55,7 +55,7 @@ bastion_enabled = true
 
 bastion_image_id = "Autonomous"
 
-bastion_notification_enabled = true
+bastion_notification_enabled = false
 
 bastion_notification_endpoint = "<email_address>"
 
