upgraded base module to 1.1.3, added wait until admin and instance_principal is ready to generate kubeconfig
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -96,6 +96,11 @@ availability_domains = {
   admin  = 1
 }
 
+tagging = {
+  computetag = { "Environment" = "uat" }
+  networktag = { "Name" = "network" }
+}
+
 # oke
 
 allow_node_port_access = false
