Changes for Oracle Vault Secret
Signed-off-by: Karthic Ravindran <karthic.ravindran@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -139,7 +139,8 @@ lb_subnet_type = "public"
 preferred_lb_subnets = "public"
 
 # ocir
-create_auth_token = false
+
+secret_id = ""
 
 email_address = ""
 
