added tags in terraform.tfvars.example

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -95,9 +95,25 @@ availability_domains = {
   operator  = 1
 }
 
-tagging = {
-  computetag = { "Environment" = "dev" }
-  networktag = { "Name" = "network" }
+# tags
+
+tags = {
+  # vcn, bastion and operator tags are required
+  # add more tags in each as desired
+  vcn = {
+    # department = "finance"
+    environment = "dev"
+  }
+  bastion = {
+    # department  = "finance"
+    environment = "dev"
+    role        = "bastion"
+  }
+  operator = {
+    # department = "finance"
+    environment = "dev"
+    role        = "operator"
+  }
 }
 
 # oke
