--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -124,6 +124,8 @@ allow_worker_ssh_access = false
 
 cluster_name = "oke"
 
+check_node_active = false
+
 dashboard_enabled = false
 
 kubernetes_version = "LATEST"
@@ -156,7 +158,7 @@ preferred_lb_subnets = "public"
 waf_enabled = false
 
 # ocir
-secret_id = ""
+secret_id = "NONE"
 
 email_address = ""
 
