--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -124,7 +124,7 @@ allow_worker_ssh_access = false
 
 cluster_name = "oke"
 
-check_node_active = "NONE"
+check_node_active = "none"
 
 dashboard_enabled = false
 
@@ -138,7 +138,7 @@ node_pools = {
 
 node_pool_name_prefix = "np"
 
-node_pool_image_id = "NONE"
+node_pool_image_id = "none"
 
 node_pool_os = "Oracle Linux"
 
@@ -158,7 +158,7 @@ preferred_lb_subnets = "public"
 waf_enabled = false
 
 # ocir
-secret_id = "NONE"
+secret_id = "none"
 
 email_address = ""
 
