--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -134,7 +134,8 @@ service_account_namespace = "kube-system"
 service_account_cluster_role_binding = ""
 
 #reuse existing vcn.If you are using base module below values can be derived from output values.
- 
+ vcn_id = 
+
  bastion_public_ip = 
  
  operator_private_ip = 
