added ability to enable PSP, fixed documentation bug

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -118,6 +118,10 @@ tags = {
 
 # oke
 
+admission_controller_options = {
+  PodSecurityPolicy = false
+}
+
 allow_node_port_access = false
 
 allow_worker_ssh_access = false
