--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -22,8 +22,6 @@ ssh_public_key_path = ""
 
 # networking
 
-nat_gateway_enabled = true
-
 netnum = {
   bastion    = 32
   int_lb     = 16
@@ -132,7 +130,7 @@ check_node_active = "none"
 
 dashboard_enabled = false
 
-kubernetes_version = "LATEST"
+kubernetes_version = "v.16.8"
 
 node_pools = {
   np1 = ["VM.Standard.E2.2", 1]
