--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -133,10 +133,9 @@ dashboard_enabled = false
 kubernetes_version = "v1.16.8"
 
 node_pools = {
-  np1 = ["VM.Standard.E2.2", 1, 50]
-  np2 = ["VM.Standard2.8", 2, 100]
-  np3 = ["VM.Standard.E2.2", 1, 200]
-  # np4 = ["VM.Standard.E2.2", 4, 500]
+  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
+  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
+  np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
 }
 
 node_pools_to_drain = [ "np1", "np2", "np3" ] 
