--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -23,17 +23,17 @@ ssh_public_key_path = ""
 # networking
 
 netnum = {
-  bastion    = 32
-  int_lb     = 16
-  operator   = 33
-  pub_lb     = 17
+  bastion    = 32,
+  int_lb     = 16,
+  operator   = 33,
+  pub_lb     = 17,
   workers    = 1
 }
 
 newbits = {
-  bastion    = 13
-  lb         = 11
-  operator   = 13
+  bastion    = 13,
+  lb         = 11,
+  operator   = 13,
   workers    = 2
 }
 
@@ -89,7 +89,7 @@ operator_timezone= "Australia/Sydney"
 # availability_domains
 
 availability_domains = {
-  bastion = 1
+  bastion = 1,
   operator  = 1
 }
 
@@ -99,17 +99,17 @@ tags = {
   # vcn, bastion and operator tags are required
   # add more tags in each as desired
   vcn = {
-    # department = "finance"
+    # department = "finance",
     environment = "dev"
   }
   bastion = {
-    # department  = "finance"
-    environment = "dev"
+    # department  = "finance",
+    environment = "dev",
     role        = "bastion"
   }
   operator = {
-    # department = "finance"
-    environment = "dev"
+    # department = "finance",
+    environment = "dev",
     role        = "operator"
   }
 }
@@ -133,9 +133,21 @@ dashboard_enabled = false
 kubernetes_version = "v1.16.8"
 
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
-  np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
+  np1 = {
+    shape = "VM.Standard.E3.Flex",
+    ocpus = 2,
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np2 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 2,
+    boot_volume_size = 150
+  },
+  np3 = {
+    shape = "VM.Standard.E2.2",
+    node_pool_size = 1
+  }
 }
 
 node_pools_to_drain = [ "np1", "np2", "np3" ] 
