--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -133,7 +133,7 @@ dashboard_enabled = false
 kubernetes_version = "v1.17.9"
 
 node_pools = {
-  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
+  np1 = {shape="VM.Standard.E3.Flex",ocpus=2,memory=20,node_pool_size=2,boot_volume_size=150}
   np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
   np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
 }
