changed base module to 2.1.1 so operator gets provisioned faster

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -100,6 +100,8 @@ operator_shape = {
 
 operator_timezone= "Australia/Sydney"
 
+operator_version = "8"
+
 # availability_domains
 
 availability_domains = {
