--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -23,18 +23,20 @@ ssh_public_key_path = ""
 # networking
 
 netnum = {
-  bastion    = 32
-  int_lb     = 16
-  operator   = 33
-  pub_lb     = 17
-  workers    = 1
+    bastion  = 0
+    cp       = 2
+    int_lb   = 16
+    operator = 1
+    pub_lb   = 17
+    workers  = 1
 }
 
 newbits = {
-  bastion    = 13
-  lb         = 11
-  operator   = 13
-  workers    = 2
+    bastion  = 14
+    cp       = 14
+    lb       = 11
+    operator = 14
+    workers  = 2
 }
 
 vcn_cidr = "10.0.0.0/16"
@@ -98,6 +100,8 @@ operator_shape = {
 
 operator_timezone= "Australia/Sydney"
 
+operator_version = "8"
+
 # availability_domains
 
 availability_domains = {
@@ -136,13 +140,17 @@ allow_node_port_access = false
 
 allow_worker_ssh_access = false
 
+cluster_access = "public"
+
+cluster_access_source = "0.0.0.0/0"
+
 cluster_name = "oke"
 
 check_node_active = "none"
 
 dashboard_enabled = false
 
-kubernetes_version = "v1.18.10"
+kubernetes_version = "v1.19.7"
 
 node_pools = {
   np1 = {shape="VM.Standard.E3.Flex",ocpus=2,memory=20,node_pool_size=2,boot_volume_size=150}
