Enforce signed images in OKE

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -176,6 +176,8 @@ pods_cidr = "10.244.0.0/16"
 
 services_cidr = "10.96.0.0/16"
 
+use_signed_images = false
+
 worker_mode = "private"
 
 # oke load balancers
