updated image signing logic for readability, and docs (#1)
* Narrow permissions for kubeconfig file (#276)

Some tools don't like the *kubeconfig* file to have to wide permissions. This MR narrows those permissions so only the current user can access the file.

* added ability to support custom route rules for NAT gateway route table (#280)

* added ability to support custom route rules for NAT gateway route table

* updated changelog

* updated image signing logic for readability, and docs

Co-authored-by: Maarten Mulders <mthmulders@users.noreply.github.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -22,6 +22,58 @@ ssh_public_key_path = ""
 
 # networking
 
+create_drg = false
+
+drg_display_name = "drg"
+
+internet_gateway_route_rules = [
+    /*
+    {
+      destination = "192.168.1.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "drg" // use drg created by this module. Requires `create_drg = true`
+      description = "route through drg"
+    },
+    {
+      destination = "8.8.8.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "internet_gateway" // use Internet Gateway created by this module. Requires `internet_gateway_enabled = true`
+      description = "route through Internet Gateway"
+    },
+    {
+      destination = "8.8.8.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "ocid1.drg." // use an externally created resource or a resource that was not available at the time of the 1st run`
+      description = "route through an externally created resource or a resource that was not available at the time of the 1st run"
+    }
+    */ 
+]
+
+lockdown_default_seclist = false
+
+nat_gateway_route_rules      = [
+    /*
+    {
+      destination = "192.168.1.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "drg" // use drg created by this module. Requires `create_drg = true`
+      description = "route through drg"
+    },
+    {
+      destination = "8.8.8.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "nat_gateway" // use NAT gateway created by this module. Requires `nat_gateway_enabled = true`
+      description = "route through NAT gateway"
+    },
+    {
+      destination = "8.8.8.0/24"
+      destination_type = "CIDR_BLOCK"
+      network_entity_id = "ocid1.drg." // use an externally created resource or a resource that was not available at the time of the 1st run`
+      description = "route through an externally created resource or a resource that was not available at the time of the 1st run"
+    }
+    */
+]
+
 netnum = {
     bastion  = 0
     cp       = 2
@@ -214,7 +266,7 @@ use_encryption = false
 
 existing_key_id = ""
 
-image_signing_keys = [""]
+image_signing_keys = ["ocid1.key.oc1....", "ocid1.key.oc1...."]
 
 # service account
 create_service_account = true
