--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -258,6 +258,8 @@ secret_name = "ocirsecret"
 
 username = ""
 
+secret_ns = "default"
+
 # calico
 calico_enabled = false
 calico_version = "3.19"
